# Intv_App

./: .dockerignore  .gitignore  =0.16.0  LICENSE  MANIFEST.in  NOTICE  README.md  TODO.md  complete_performance_test.py  debug_dependency_manager.py  debug_file_classification.py  docker-compose.yml  example_api_usage.py  install-dev.sh  install.py  intv  intv.py  llm_completion_report.py  pyproject.toml  quick-install.bat  quick-install.sh  requirements.txt  run_tests.sh  setup.py  streamlit_main_app.py  test_adult_pipeline.py  test_audio_pipeline.py  test_final_verification.py  test_output.txt
config/: allegations_vars.json  close_dispo_vars.json  close_ea_vars.json  close_staffing_vars.json  config.cloudflare.yaml  config.yaml  homeassess_vars.json  intv_ar_vars.json  intv_child_vars.json  intv_col_vars.json  policy_prompt.yaml  policy_prompt_example.yaml  users_example.yaml  vars.json  vars_example.json
docker/: Dockerfile.cloudflared  Dockerfile.cpu  Dockerfile.gpu  docker-compose.yml  nginx.conf
docs/: AUDIO_PIPELINE_FIXES.md  GUIDE_PIPELINE_USAGE.md  PIPELINE_ENHANCEMENT_COMPLETE.md  STATUS_AUDIO_SYSTEM.md  STATUS_RAG_SYSTEM.md  TESTING_GUIDE.md
intv/: __init__.py  __main__.py  audio_diarization.py  audio_live_stream.py  audio_system.py  audio_transcribe.py  audio_vad.py  cli.py  cli_entry.py  config.py  dependency_manager.py  intelligent_document_processor.py  llm.py  module_utils.py  ocr.py  output_and_cache.py  pipeline_cli.py  pipeline_orchestrator.py  platform_utils.py  rag.py  rag_system.py  rag_system_minimal.py  server_utils.py  test_cli_and_pipeline.py  test_docker_entrypoint.sh  test_llm.py  test_pipeline_utils.py  test_simple_ocr.py  unified_processor.py  utils.py
scripts/: cloudflared-entrypoint.sh  document_intv.ps1  intv_startup.bat  intv_startup.sh  run_and_info.sh  run_and_info_win.bat  scout_install.sh  set_udp_buffers.sh
src/: compliance_check.py  config.json  config.py  def_globalvars.py  formatter.py  llm.py  llm_db.py  main.py  mod_calcage.py  mod_hideapp.py  mod_switchboardtransfer.py  mod_transparent.py  processor.py  rag.py  utils.py
test_src/: test_api.py  test_cli_and_pipeline.py  test_docker_entrypoint.sh  test_pipeline_utils.py  test_server_utils.py
tests/: debug_llm_policy.py  legal_example.yaml  test_audio_focused.py  test_audio_pipeline_complete.py  test_audio_verification.py  test_auto_context_detection.py  test_auto_detection_focused.py  test_basic_no_module.py  test_complete_pipeline.py  test_comprehensive_auto_context.py  test_comprehensive_workflow.py  test_config.py  test_config_context_size.py  test_image_ocr.py  test_integration_auto_context.py  test_llm_fix.py  test_llm_output_formatting.py  test_llm_pipeline.py  test_medical_intake.txt  test_medical_module.yaml  test_model_detection.py  (+6 more)
(+67 files in other folders)
