[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intv"
version = "0.2.0"
description = "Interview Application with Document Processing and LLM Integration"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
license = {text = "MIT"}
dependencies = [
    "streamlit>=1.25.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",  # CPU-only by default
    "sentence-transformers>=2.2.0",
    "PyPDF2>=3.0.0",
    "python-docx>=0.8.11",
    "langchain>=0.0.200",
    "chromadb>=0.4.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "huggingface-hub>=0.16.0",
    "psutil>=5.9.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
audio = [
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "speechrecognition>=3.10.0",
    # pyaudio is platform-specific, handle separately
]
ocr = [
    "pytesseract>=0.3.10",
    "Pillow>=9.0.0",
    "pdf2image>=1.16.0",
]
# Platform-specific GPU support
gpu-cuda = [
    "torch[cuda]>=2.0.0",
    "transformers[torch]>=4.30.0",
]
gpu-rocm = [
    "torch[rocm]>=2.0.0",  # AMD GPUs
    "transformers[torch]>=4.30.0",
]
gpu-mps = [
    "torch>=2.0.0",  # Apple Silicon (MPS backend built-in)
    "transformers[torch]>=4.30.0",
]
# Intel GPU support (when available)
gpu-intel = [
    "intel-extension-for-pytorch>=2.0.0",
    "torch>=2.0.0",
    "transformers[torch]>=4.30.0",
]
# Convenience groups
gpu = ["intv[gpu-cuda]"]  # Default to CUDA (explicit)
arm = ["intv[audio,ocr]"]  # ARM-friendly (no GPU)
raspberry-pi = ["intv[audio,ocr]"]  # Raspberry Pi
# Platform-specific full installs
full-cuda = ["intv[audio,ocr,gpu-cuda]"]
full-rocm = ["intv[audio,ocr,gpu-rocm]"] 
full-mps = ["intv[audio,ocr,gpu-mps]"]
full-intel = ["intv[audio,ocr,gpu-intel]"]
# Safe full install (no GPU conflicts)
full = ["intv[audio,ocr]"]

[project.scripts]
intv = "intv.cli_entry:main"
intv-pipeline = "intv.pipeline_cli:main"
intv-audio = "intv.audio_utils:main"
intv-ocr = "intv.ocr:main"
intv-gui = "intv.gui.app:main"
intv-platform = "intv.platform_utils:print_install_recommendations"

[tool.setuptools.packages.find]
where = ["."]
include = ["intv*"]

[tool.setuptools.package-dir]

[tool.setuptools.package-data]
intv = ["*.yaml", "*.json"]
